market_intelligence/iptables_backup.txt
# Generated by iptables-save v1.8.10 (nf_tables) on Sat Mar  7 20:31:23 2026
*raw
:PREROUTING ACCEPT [49473:433413882]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Sat Mar  7 20:31:23 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Sat Mar  7 20:31:23 2026
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
:DOCKER-BRIDGE - [0:0]
:DOCKER-CT - [0:0]
:DOCKER-FORWARD - [0:0]
:DOCKER-INTERNAL - [0:0]
:DOCKER-USER - [0:0]
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-INTERNAL
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i docker0 -j ACCEPT
COMMIT
# Completed on Sat Mar  7 20:31:23 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Sat Mar  7 20:31:23 2026
*nat
:PREROUTING ACCEPT [294:24558]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [1117:90469]
:POSTROUTING ACCEPT [1117:90469]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-1a27a8f7433e -j MASQUERADE
COMMIT
# Completed on Sat Mar  7 20:31:23 2026
